# prometheus-persister

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  proto-check.yml  release.yml
docs/: grafana-cloud-guide.md  replacing-cortex-tss.md
openspec/: config.yaml
openspec/changes/archive/2026-04-02-cicd-image-distribution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-02-grafana-cloud-guide/: tasks.md
openspec/changes/archive/2026-04-02-kafka-prometheus-bridge/: design.md  tasks.md
openspec/changes/archive/2026-04-02-kafka-prometheus-bridge/specs/kafka-consumer/: spec.md
openspec/changes/cicd-image-distribution/: design.md  proposal.md  tasks.md
openspec/changes/grafana-cloud-guide/: design.md  proposal.md  tasks.md
openspec/changes/kafka-prometheus-bridge/: proposal.md  tasks.md
openspec/changes/kafka-prometheus-bridge/specs/metric-transformer/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/container-conventions/: spec.md
openspec/specs/grafana-cloud-guide/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/proto-contract-check/: spec.md
openspec/specs/release-pipeline/: spec.md
openspec/specs/remote-writer/: spec.md
prometheus_persister/: __init__.py  __main__.py  config.py  consumer.py  main.py  observability.py  remote_writer.py  transformer.py
proto/: remote_write.proto
tests/: test_consumer.py  test_integration.py  test_remote_writer.py  test_transformer.py
tools/: mock_producer.py
